--- a/parser-test/loginwindow.ui
+++ b/parser-test/loginwindow.ui
@@ -29,7 +29,7 @@
    <property name="styleSheet">
     <string notr="true">#MainWidget {background-color:rgb(162, 0, 70);}</string>
    </property>
-   <layout class="QGridLayout" name="gridLayout">
+   <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0" rowminimumheight="0,0" columnminimumwidth="100,0,0">
     <property name="leftMargin">
      <number>2</number>
     </property>
@@ -750,7 +750,7 @@
       </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>40</width>
+        <width>100</width>
         <height>20</height>
        </size>
       </property>
@@ -776,7 +776,7 @@
       </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>40</width>
+        <width>100</width>
         <height>20</height>
        </size>
       </property>
@@ -789,6 +789,9 @@
       </property>
       <property name="sizeConstraint">
        <enum>QLayout::SetFixedSize</enum>
+      </property>
+      <property name="leftMargin">
+       <number>0</number>
       </property>
       <item>
        <spacer name="verticalSpacer_2">
@@ -826,6 +829,7 @@
         <property name="font">
          <font>
           <pointsize>10</pointsize>
+          <kerning>true</kerning>
          </font>
         </property>
         <property name="styleSheet">
@@ -849,6 +853,9 @@
         </property>
         <property name="placeholderText">
          <string>email</string>
+        </property>
+        <property name="cursorMoveStyle">
+         <enum>Qt::LogicalMoveStyle</enum>
         </property>
        </widget>
       </item>
@@ -1050,6 +1057,9 @@
 	color: white;
 }</string>
         </property>
+        <property name="inputMethodHints">
+         <set>Qt::ImhHiddenText|Qt::ImhNoAutoUppercase|Qt::ImhNoPredictiveText|Qt::ImhSensitiveData</set>
+        </property>
         <property name="inputMask">
          <string notr="true"/>
         </property>
@@ -1064,6 +1074,9 @@
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
+        </property>
+        <property name="readOnly">
+         <bool>true</bool>
         </property>
         <property name="placeholderText">
          <string notr="true">password</string>
