--- a/parser-test/loginwindow.ui
+++ b/parser-test/loginwindow.ui
@@ -267,7 +267,7 @@
      </spacer>
     </item>
     <item row="1" column="1">
-     <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0,0,0,0">
+     <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0,0,0,0,0,0">
       <property name="spacing">
        <number>20</number>
       </property>
@@ -289,6 +289,16 @@
          </size>
         </property>
        </spacer>
+      </item>
+      <item>
+       <widget class="QLabel" name="Error">
+        <property name="text">
+         <string>Error!</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="Name">
@@ -351,7 +361,7 @@
         <property name="maximumSize">
          <size>
           <width>350</width>
-          <height>25</height>
+          <height>35</height>
          </size>
         </property>
         <property name="font">
@@ -382,10 +392,53 @@
          <set>Qt::AlignCenter</set>
         </property>
         <property name="readOnly">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <property name="placeholderText">
          <string notr="true">password</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="repeatPassword">
+        <property name="minimumSize">
+         <size>
+          <width>400</width>
+          <height>35</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>400</width>
+          <height>35</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>10</pointsize>
+          <stylestrategy>PreferAntialias</stylestrategy>
+         </font>
+        </property>
+        <property name="inputMask">
+         <string notr="true"/>
+        </property>
+        <property name="text">
+         <string notr="true"/>
+        </property>
+        <property name="frame">
+         <bool>false</bool>
+        </property>
+        <property name="echoMode">
+         <enum>QLineEdit::Password</enum>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+        <property name="readOnly">
+         <bool>false</bool>
+        </property>
+        <property name="placeholderText">
+         <string notr="true">confirm password</string>
         </property>
        </widget>
       </item>
@@ -410,7 +463,7 @@
           </property>
           <property name="minimumSize">
            <size>
-            <width>150</width>
+            <width>145</width>
             <height>22</height>
            </size>
           </property>
@@ -605,6 +658,9 @@
        <spacer name="bottomVerticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::MinimumExpanding</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
