--- a/parser-test/settings_programlayout.ui
+++ b/parser-test/settings_programlayout.ui
@@ -96,7 +96,7 @@
       </size>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>Language</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
@@ -177,6 +177,16 @@
        <height>25</height>
       </size>
      </property>
+     <item>
+      <property name="text">
+       <string>Русский</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>English</string>
+      </property>
+     </item>
     </widget>
    </item>
   </layout>
